# datapipes

./: .gitignore  README.md  install.bat  install.ps1  install_datapipes_for_matlab.ps1  license  pyproject.toml  start_jupyter.bat  uv.lock.old
src/datapipes/: __init__.py  auto_indexing_window.py  contrast.py  datapipe.py  dataset_windows.py  deep_hasher.py  filters.py  io_pipeline.py  manual_ops.py  nd_windows.py  ops.py  pretensors.py  sic.py  sinks.py  special_ops.py  subbatching.py  traced_int.py
src/datapipes/analysis/: contrast.py  filters.py  noise.py  optimization_filter.py  spectral.py
src/datapipes/analysis/hands/: __init__.py  anatomical_segmentation.py  hand_anatomy.py  hand_landmarks.py  hand_segmentation.py
src/datapipes/datasets/: __init__.py  compressed_image_stream_dataset.py  compressed_image_tensor.py  dataset_hdf5.py  dataset_image_encoded_hdf5.py  dataset_image_folder.py  dataset_rls.py  dataset_source.py  dataset_video_file.py  dataset_zarr.py
src/datapipes/datasets/modifiers/: __init__.py  cached_dataset.py  compressed_cached_dataset.py
src/datapipes/datasets/utils/: background_progress_jupyter.py  compressed_image_stream_tensor.py  datastore.py  dynamic_compressed_image_stream_tensor.py  timestamps.py
src/datapipes/gradio_ui/: gradio_folder_picker.py  gradio_progress_bar.py  parallel_process_manager.py  parallel_process_ui.py  sys_stats.py  ui_utils.py
src/datapipes/plotting/: __init__.py  interactive_plots.py  plots.py  torch_colormap.py
src/datapipes/save_datapipe/: RLS_file_writer.py  __init__.py  to_compressed_image_stream_hdf5.py  to_hdf5.py  to_j2k_h5.py  to_mp4.py  to_rls.py  to_zarr.py
src/datapipes/save_datapipe/file_format/: __init__.py  format_specification.py  image_compression.py  inspect_hdf5.py  metadata_utils.py
src/datapipes/tools/: __init__.py  datapipes_cli.py  dataset_wrangler_cli.py
src/datapipes/tools/dataset_wrangler_app/: compress_app.py  compress_task.py  copy_app.py  copy_manager.py  dataset_wrangler.py  delete_app.py  safe_copy_task.py
src/datapipes/tools/init_matlab/: __init__.py  install_matlab_library.py
src/datapipes/utils/: __init__.py  benchmarking.py  cache_results.py  deep_hasher.py  forced_tty_mode_tqdm.py  html_output.py  import_resource.py  introspection.py  io_pipeline.py  matlab_compat.py  output_server.py  prefetch_iterator.py  progress_bar.py  set_running_under_matlab.py  simpletqdm.py  slicer.py
src/datapipes/utils/resources/init/: install.bat  pyproject.toml  quickstart.ipynb
src/datapipes/utils/resources/matlab/: brrr.m  markus.m  quickstart.m
src/datapipes/utils/resources/matlab/MatDatapipes/: install.m  uninstall.m
src/datapipes/utils/resources/matlab/MatDatapipes/+MatDatapipes/: MatDatapipe.m  getItem.m  handsSegmentationMask.m  importDatapipesPython.m  loadContrastHandsRLS.m  loadHandsRLS.m  loadMatDatapipe.m  loadMatDatapipeCacheCompressed.m  loadMatDatapipeCachePrefetched.m  loadPython.m  quickPlot.m  tensorToMatArray.m
