[project]
name = "DataPipes"
version = "0.1.01"
description = "DataPipes"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "einops>=0.8.1",
    "fastplotlib[imgui]>=0.5.1",
    "h5py>=3.14.0",
    "hdf5plugin>=5.1.0",
    "hickle>=5.0.3",
    "icecream>=2.1.8",
    "imageio[ffmpeg]>=2.37.0",
    "imgui-bundle<1.92",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-rfb>=0.5.3",
    "matplotlib>=3.10.6",
    "numcodecs>=0.16.3",
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "plotly>=6.5.0",
    "pandas>=2.3.3",
    "pyglm>=2.8.2",
    "rich>=14.2.0",
    "scikit-image>=0.25.2",
    "setuptools>=80.9.0",
    "simplejpeg>=1.9.0",
    "tqdm>=4.67.1",
    "zarr>=3.1.3",
    "ipykernel>=6.30.1",
    "ndindex>=1.10.0",
    "av>=16.0.1",
    "pynvvideocodec>=2.0.3",
    "kornia>=0.8.2",
    "mediapipe>=0.10.31",
    "imagecodecs[all]>=2025.11.11",
    "nvidia-nvimgcodec-cu12[all]>=0.6.1.37",
    "gradio>=6.2.0",
    "blake3>=1.0.8",
    "psutil>=7.1.3",
    "nvidia-ml-py>=13.590.44",
    "pywebview>=6.1",
]

[project.scripts]
dataset-wrangler = "datapipes.tools.dataset_wrangler_cli:main"
datapipes = "datapipes.tools.datapipes_cli:main"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/datapipes"]

[tool.hatch.build]
include = [
  "datapipes/utils/resources/**",
]

[tool.setuptools.packages.find]
where = ["src/resources"]

